--- a/doctor.yml
+++ b/doctor.yml
@@ -1,41 +1,54 @@
-# Default check configuration for `wp doctor`
-autoload-options-size:
-  check: Autoload_Options_Size
-constant-savequeries-falsy:
-  check: Constant_Definition
-  options:
-    constant: SAVEQUERIES
-    falsy: true
-constant-wp-debug-falsy:
-  check: Constant_Definition
-  options:
-    constant: WP_DEBUG
-    falsy: true
-core-update:
-  check: Core_Update
-core-verify-checksums:
-  check: Core_Verify_Checksums
-cron-count:
-  check: Cron_Count
-cron-duplicates:
-  check: Cron_Duplicates
+# WPMU DEV configuration for `wp doctor`
+wpmudev-core-stats:
+  class: WPMUDEV_Doctor_Core_Stats
+  require: wpmudev-doctor.php
+wpmudev-plugin-stats:
+  class: WPMUDEV_Doctor_Plugin_Stats
+  require: wpmudev-doctor.php
+plugin-update:
+  check: Plugin_Update
+wpmudev-plugin-check:
+  class: WPMUDEV_Doctor_Plugin_Check
+  require: wpmudev-doctor.php
+wpmudev-theme-stats:
+  class: WPMUDEV_Doctor_Theme_Stats
+  require: wpmudev-doctor.php
+theme-update:
+  check: Theme_Update
+wpmudev-user-stats:
+  class: WPMUDEV_Doctor_User_Stats
+  require: wpmudev-doctor.php
+wpmudev-roles-stats:
+  class: WPMUDEV_Doctor_Role_Stats
+  require: wpmudev-doctor.php
+wpmudev-posts-stats:
+  class: WPMUDEV_Doctor_Posts_Stats
+  require: wpmudev-doctor.php
+wpmudev-autoload-report:
+  class: WPMUDEV_Doctor_Autoload_Report
+  require: wpmudev-doctor.php
+wpmudev-ttfb:
+  class: WPMUDEV_Doctor_TTFB
+  require: wpmudev-doctor.php
+wpmudev-cache-headers:
+  class: WPMUDEV_Doctor_Cache_Headers
+  require: wpmudev-doctor.php
+wpmudev-verify-core-checksums:
+  class: WPMUDEV_Doctor_Verify_Core_Checksums
+  require: wpmudev-doctor.php
+wpmudev-cron-stats:
+  class: WPMUDEV_Doctor_Cron_Stats
+  require: wpmudev-doctor.php
+wpmudev-constants:
+  class: WPMUDEV_Doctor_Constants
+  require: wpmudev-doctor.php
+wpmudev-log-scan:
+  class: WPMUDEV_Doctor_Log_Scan
+  require: wpmudev-doctor.php
 file-eval:
   check: File_Contents
   options:
     regex: eval\(.*base64_decode\(.*
-option-blog-public:
-  check: Option_Value
-  options:
-    option: blog_public
-    value: 1
-plugin-active-count:
-  check: Plugin_Active_Count
-plugin-deactivated:
-  check: Plugin_Deactivated
-plugin-update:
-  check: Plugin_Update
-theme-update:
-  check: Theme_Update
 cache-flush:
   check: Cache_Flush
 php-in-upload:
